--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <p>paragraphe1</p>
 </head>
 <body>
     <h1>bonjour</h1>
+    cava
+    
 </body>
 </html>
