--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <p>paragraphe1</p>
 </head>
 <body>
-    <h1>bonjour</h1>
-    cava
-    bien ou bien ?
+    <h1>test ok!</h1>
 
 </body>
 </html>
