--- a/page-2/page-2.html
+++ b/page-2/page-2.html
@@ -5,8 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test ok!</h1>
-    <a href="./page-2/page-2.html"><button>Page 2</button></a>
-
+    <h1>Bienvenue sur la page 2 </h1>
 </body>
 </html>
