--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link href="./index.css" rel="stylesheet" >
 </head>
 <body>
     <h1>test ok!</h1>
