--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>test ok!</h1>
     <a href="./page-2/page-2.html"><button>Page 2</button></a>
+    <img src="./index-images/chat.png" alt="un chat qui rugie">
 
 </body>
 </html>
